[package]
name = "vk-sys"
version = "0.4.0"

description = "Bindings for the Vulkan graphics API"
keywords = ["vulkan", "bindings", "graphics", "gpu", "rendering"]
categories = ["rendering::graphics-api"]

authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>", "The vulkano contributors"]
license = "MIT/Apache-2.0"
repository = "https://github.com/vulkano-rs/vulkano"
documentation = "https://docs.rs/vk-sys"
