[package]
name = "vulkano-win"
version = "0.11.1"
edition = "2018"

description = "Link between vulkano and winit"
keywords = ["vulkan", "bindings", "graphics", "gpu", "rendering"]
categories = ["rendering::graphics-api"]

authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>", "The vulkano contributors"]
license = "MIT/Apache-2.0"
repository = "https://github.com/vulkano-rs/vulkano"
documentation = "https://docs.rs/vulkano"
homepage = "https://vulkano.rs"

[dependencies]
# winit = "0.22"
winit = { git = "https://github.com/rust-windowing/winit.git" }
vulkano = { version = "0.11.0", path = "../vulkano" }

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.13"
cocoa = "0.18"
objc = "0.2.2"
