[package]
name = "vulkano"
version = "0.11.1"
edition = "2018"

description = "Safe wrapper for the Vulkan graphics API"
keywords = ["vulkan", "bindings", "graphics", "gpu", "rendering"]
categories = ["rendering::graphics-api"]

authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>", "The vulkano contributors"]
license = "MIT/Apache-2.0"
repository = "https://github.com/vulkano-rs/vulkano"
documentation = "https://docs.rs/vulkano"
homepage = "https://vulkano.rs"

readme = "../README.md"
build = "build.rs"

[dependencies]
fnv = "1.0.6"
smallvec = "0.6"

lazy_static = "1"
half = "1"

crossbeam = "0.7"
shared_library = "0.1"

vk-sys = { version = "0.4.0", path = "../vk-sys" }
